feat: update pnpm-lock and enhance documentation for stepper integration
- Added `@stepperize/core` as a workspace dependency in `pnpm-lock.yaml` and `package.json`.
- Removed outdated dependencies related to `@tanstack/zod-form-adapter` to streamline package management.
- Improved documentation for the `useStepper` hook, clarifying its API and configuration options.
- Enhanced API references and examples for stepper components, including detailed descriptions and usage patterns.
- Updated various sections to improve clarity and accessibility for developers integrating stepper functionality.

--- a/apps/docs/content/docs/react/api-references/define.mdx
+++ b/apps/docs/content/docs/react/api-references/define.mdx
@@ -23,10 +23,10 @@ Each step must have a unique `id`. You can add any custom properties (`title`, `
 
 | Property | Type | Description |
 | -------- | ---- | ----------- |
-| `steps` | `Steps` | The array of step objects you passed |
-| `useStepper` | `(config?) => Stepper` | Hook for state, navigation, lookup, flow, metadata. Optional config: `initialStep`, `initialMetadata` ([Hook](./hook)) |
-| `Scoped` | `Component` | Provider for stepper context ([Scoped](./scoped)) |
-| `Stepper` | `StepperPrimitives<Steps>` | Type-safe UI primitives ([Primitives](./primitives)) |
+| `steps` | `Steps` | The array of step objects you passed (same order as arguments) |
+| `useStepper` | `(props?: { initialStep?, initialMetadata? }) => Stepper<Steps>` | Hook for state, navigation, lookup, flow, metadata, lifecycle ([Hook](./hook)) |
+| `Scoped` | `(props: ScopedProps<Steps>) => ReactElement` | Provider for stepper context; props: `initialStep?`, `initialMetadata?`, `children` ([Scoped](./scoped)) |
+| `Stepper` | `StepperPrimitives<Steps>` | Type-safe UI primitives: Root, List, Item, Trigger, Title, Description, Indicator, Separator, Content, Actions, Prev, Next ([Primitives](./primitives)) |
 
 ## Next steps
 
