--- a/apps/docs/content/docs/react/api-references/lookup.mdx
+++ b/apps/docs/content/docs/react/api-references/lookup.mdx
@@ -60,7 +60,7 @@ function StepNavigator() {
 
 When you need step lookup **without** React or current state (e.g. SSR, validation, layout logic), use `generateStepperUtils` from `@stepperize/core`. Install the core package if needed: `pnpm add @stepperize/core`.
 
-```tsx
+```tsx twoslash
 import { generateStepperUtils } from "@stepperize/core";
 
 const steps = [
