--- a/apps/docs/content/docs/react/api-references/lookup.mdx
+++ b/apps/docs/content/docs/react/api-references/lookup.mdx
@@ -26,7 +26,7 @@ There is no `has` or `count`; use `stepper.lookup.get(id) != null` and `stepper.
 ## Usage with useStepper
 
 ```tsx twoslash
-import * as React from "react";
+import React from "react";
 import { defineStepper } from "@stepperize/react";
 
 const { useStepper } = defineStepper(
