--- a/apps/docs/content/docs/react/api-references/schema-validation.mdx
+++ b/apps/docs/content/docs/react/api-references/schema-validation.mdx
@@ -64,7 +64,7 @@ const { useStepper } = defineStepper(
 Steps are plain objects; you can add a `schema` (or any key) to each step. Access via the stepper:
 
 ```tsx twoslash
-import * as React from "react";
+import React from "react";
 import { z } from "zod";
 import { defineStepper } from "@stepperize/react";
 
