--- a/apps/docs/content/docs/react/my-first-stepper.mdx
+++ b/apps/docs/content/docs/react/my-first-stepper.mdx
@@ -76,7 +76,7 @@ function MyStepper() {
 ## Full example
 
 ```tsx twoslash
-import * as React from "react";
+import React from "react";
 import { defineStepper } from "@stepperize/react";
 
 const { useStepper } = defineStepper(
